# sonarr-api-rs

./: Cargo.toml  README.md
.openapi-generator/: FILES
docs/: CustomFormatApi.md  DownloadClientApi.md  EpisodeApi.md  EpisodeResource.md  ImportListApi.md  ImportListExclusionApi.md  IndexerApi.md  ManualImportReprocessResource.md  ManualImportResource.md  MetadataApi.md  NotificationApi.md  QualityDefinitionApi.md  QueueApi.md  QueueResource.md  ReleaseResource.md  SeriesApi.md  SeriesLookupApi.md
src/apis/: api_info_api.rs  authentication_api.rs  auto_tagging_api.rs  backup_api.rs  blocklist_api.rs  calendar_api.rs  calendar_feed_api.rs  command_api.rs  configuration.rs  custom_filter_api.rs  custom_format_api.rs  cutoff_api.rs  delay_profile_api.rs  disk_space_api.rs  download_client_api.rs  download_client_config_api.rs  episode_api.rs  episode_file_api.rs  file_system_api.rs  health_api.rs  history_api.rs  host_config_api.rs  import_list_api.rs  import_list_config_api.rs  import_list_exclusion_api.rs  indexer_api.rs  indexer_config_api.rs  indexer_flag_api.rs  language_api.rs  language_profile_api.rs  language_profile_schema_api.rs  localization_api.rs  log_api.rs  log_file_api.rs  manual_import_api.rs  media_cover_api.rs  media_management_config_api.rs  metadata_api.rs  missing_api.rs  mod.rs  (+30 more)
src/models/: episode_resource.rs  host_config_resource.rs  manual_import_reprocess_resource.rs  manual_import_resource.rs  mod.rs  quality_profile_resource.rs  queue_resource.rs  rejection.rs  release_resource.rs
