[package]
name = "sonarr-api-rs"
version = "3.0.0"
edition = "2021"
authors = ["OpenAPI Generator team and contributors", "Diptesh Choudhuri"]
description = "Rust API wrapper for Sonarr"
license = "GPL-3.0"
homepage = "https://github.com/IgnisDa/sonarr-api-rs"
repository = "https://github.com/IgnisDa/sonarr-api-rs"
readme = "README.md"
keywords = ["sonarr"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
  "base64",
  "std",
  "macros",
] }
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
